--- a/9.ipynb
+++ b/9.ipynb
@@ -12,13 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16 ms ± 127 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "l = 25\n",
     "preamble = inp[:l]\n",
-    "rest = inp[l:]"
+    "rest = inp[l:]\n",
+    "val = next(e for i, e in enumerate(inp) if i >= l and e not in {sum(v) for v in itertools.combinations(inp[i-l:i], 2)})\n",
+    "\n"
    ]
   },
   {
@@ -27,7 +37,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "val = next(e for i, e in enumerate(inp) if i >= l and e not in {sum(v) for v in itertools.combinations(inp[i-l:i], 2)})"
+    "for a, b in itertools.combinations(range(len(inp)), 2):\n",
+    "    sub = inp[a:b]\n",
+    "    if sum(sub) == val:\n",
+    "        print(min(sub) + max(sub))\n",
+    "        break\n",
+    "        "
    ]
   },
   {
@@ -84,12 +99,7 @@
      ]
     }
    ],
-   "source": [
-    "for a, b in itertools.combinations(range(len(inp)), 2):\n",
-    "    sub = inp[a:b]\n",
-    "    if sum(sub) == val:\n",
-    "        print(min(sub) + max(sub))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
