--- a/01.ipynb
+++ b/01.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -43,16 +43,23 @@
        "206780"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(sorted(\n",
-    "    sum(int(e) for e in p.split())\n",
-    "    for p in boilerplate.get_input_lines(2022, 1).split(\"\\n\\n\")\n",
-    ")[-3:])"
+    "import heapq\n",
+    "\n",
+    "sum(\n",
+    "    heapq.nlargest(\n",
+    "        3,\n",
+    "        (\n",
+    "            sum(int(e) for e in p.split())\n",
+    "            for p in boilerplate.get_input_lines(2022, 1).split(\"\\n\\n\")\n",
+    "        ),\n",
+    "    )\n",
+    ")\n"
    ]
   },
   {
