--- a/02.ipynb
+++ b/02.ipynb
@@ -2,31 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import boilerplate"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "l = boilerplate.get_input_lines(2022, 2).splitlines()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9241"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sta = 3  # number of 1st gen starter pokemon\n",
+    "pok = 151  # total number of first gen pokemons\n",
+    "sum(ord(e[-1]) - 87 + sta*((ord(e[-1])-ord(e[0])-pok)%sta) for e in l)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14610"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sta = 3  # number of 1st gen starter pokemon\n",
+    "pok = 151  # total number of first gen pokemons\n",
+    "sum(sta*(ord(e[-1]) - 88) + 1 + ((ord(e[-1])+ord(e[0])-pok)%sta) for e in l)"
+   ]
   }
  ],
  "metadata": {
@@ -36,7 +70,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4,
