--- a/03.ipynb
+++ b/03.ipynb
@@ -2,60 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boilerplate"
+    "import boilerplate\n",
+    "l = boilerplate.get_input_lines(2022, 3).splitlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "l = boilerplate.get_input_lines(2022, 2).splitlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9241"
+       "7691"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(ord(e[-1])-87+3*((ord(e[-1])-ord(e[0])-1)%3)for e in l)"
+    "sum((ord(list(set(e[len(e)//2:])&set(e[:len(e)//2]))[0])-96)%58 for e in l)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14610"
+       "2508"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sum(3*(ord(e[-1])-88)+1+((ord(e[-1])+ord(e[0])-1)%3)for e in l)"
+    "i=iter(l)\n",
+    "sum((ord(list(set(j)&set(k)&set(l))[0])-96)%58 for j,k,l in zip(i,i,i))"
    ]
   },
   {
@@ -63,9 +56,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "9241 / 14610"
-   ]
+   "source": []
   }
  ],
  "metadata": {
