--- a/01.ipynb
+++ b/01.ipynb
@@ -11,21 +11,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "69626"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.11.0 64-bit' requires ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/bin/python3.11 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
     }
    ],
    "source": [
+    "%%timeit\n",
     "max(\n",
     "    sum(int(e) for e in p.split())\n",
     "    for p in boilerplate.get_input_lines(2022, 1).split(\"\\n\\n\")\n",
@@ -49,6 +50,7 @@
     }
    ],
    "source": [
+    "%%timeit\n",
     "import heapq\n",
     "\n",
     "sum(\n",
