--- a/08.ipynb
+++ b/08.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,53 +12,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = \"\"\"30373\n",
+    "25512\n",
+    "65332\n",
+    "33549\n",
+    "35390\"\"\".splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "a = np.array([[int(i) for i in j] for j in l])\n",
-    "m = np.zeros((4, *a.shape), dtype=int)"
+    "a = np.array([[int(i) for i in j] for j in l])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "213 µs ± 4.71 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "m[0] = np.maximum.accumulate(a, axis=0)\n",
-    "m[1] = np.maximum.accumulate(a[::-1], axis=0)[::-1]\n",
-    "m[2] = np.maximum.accumulate(a, axis=1)\n",
-    "m[3] = np.maximum.accumulate(a[:,::-1], axis=1)[:,::-1]\n",
     "\n",
-    "np.logical_or.reduce(np.array([\n",
-    "    m[0] > np.pad(m[0,:-1,:], [(1, 0), (0, 0)], constant_values=-1),\n",
-    "    m[1] > np.pad(m[1, 1:,:], [(0, 1), (0, 0)], constant_values=-1),\n",
-    "    m[2] > np.pad(m[2,:,:-1], [(0, 0), (1, 0)], constant_values=-1),\n",
-    "    m[3] > np.pad(m[3,:, 1:], [(0, 0), (0, 1)], constant_values=-1),\n",
-    "])).sum()"
+    "m = np.maximum.accumulate(np.array([a, a[:,::-1], a.T, a.T[:,::-1]]), axis=2)\n",
+    "\n",
+    "diff = (m[...,1:] - m[...,:-1])[:,1:-1,:-1]\n",
+    "\n",
+    "np.logical_or(\n",
+    "    np.logical_or(diff[0], diff[1][:,::-1]),\n",
+    "    np.logical_or(diff[2], diff[3][:,::-1]).T\n",
+    ").sum() + 2 * a.shape[0] + 2 * a.shape[1] - 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "123 ms ± 1.68 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "252000"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -77,6 +93,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "np.logical_or.reduce(np.array([\n",
+    "    m[0] > np.pad(m[0,:-1,:], [(1, 0), (0, 0)], constant_values=-1),\n",
+    "    m[1] > np.pad(m[1, 1:,:], [(0, 1), (0, 0)], constant_values=-1),\n",
+    "    m[2] > np.pad(m[2,:,:-1], [(0, 0), (1, 0)], constant_values=-1),\n",
+    "    m[3] > np.pad(m[3,:, 1:], [(0, 0), (0, 1)], constant_values=-1),\n",
+    "])).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 0, 3, 7, 3],\n",
+       "       [2, 5, 5, 1, 2],\n",
+       "       [6, 5, 3, 3, 2],\n",
+       "       [3, 3, 5, 4, 9],\n",
+       "       [3, 5, 3, 9, 0]])"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False,  True, False],\n",
+       "       [False,  True,  True, False, False],\n",
+       "       [ True,  True, False, False, False],\n",
+       "       [False, False,  True, False,  True],\n",
+       "       [False,  True, False,  True, False]])"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i = 3\n",
+    "j = 2\n",
+    "a - a[i, j] >= 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -85,7 +178,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 ('advent-of-code')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -99,12 +192,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10 (default, Jun 22 2022, 20:18:18) \n[GCC 9.4.0]"
+   "version": "3.11.0"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "748cf6f10333ddbed3841e6784b9ba61851c4393602f2f38e72974c854bef4ba"
+    "hash": "83f27e84803435a68d1d014c5250c87d7d069c8eee72bb56cfe52fbba0190855"
    }
   }
  },
